--- a/AndroidStudio/PhotoStackViewProject/PhotoStackView/src/main/AndroidManifest.xml
+++ b/AndroidStudio/PhotoStackViewProject/PhotoStackView/src/main/AndroidManifest.xml
@@ -10,6 +10,13 @@
         android:icon="@drawable/ic_launcher"
         android:theme="@style/AppTheme">
 
+        <activity android:name=".PhotoStackViewActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
